infrastructure/base/evolution/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evolution
  namespace: evolution
  labels:
    app.kubernetes.io/name: evolution
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: <YOUR-ORGANIZATION-HERE>
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: evolution
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
